<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="201dp"
        android:layout_height="252dp"
        android:layout_marginTop="40dp"
        android:checkedButton="@id/radioButton_nothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton_nothing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_nothing" />

        <RadioButton
            android:id="@+id/radioButton_running"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_running" />

        <RadioButton
            android:id="@+id/radioButton_walking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_walking" />

        <RadioButton
            android:id="@+id/radioButton_staying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_staying" />

        <RadioButton
            android:id="@+id/radioButton_getting_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_getting_up" />

        <RadioButton
            android:id="@+id/radioButton_sitting_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_sitting_down" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        tools:text="@string/question" />

</androidx.constraintlayout.widget.ConstraintLayout>